--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
 	"auth": {
 		"twitter": {
-			"consumerkey" : "yourConsumerKey",
-			"consumersecret" : "yourSecretKey",
+			"consumerkey" : "6Ixi6GVmBfbV602LxdP9xg",
+			"consumersecret" : "wXNZ86K0HfhfnfOQsyKzA2QJMmWDubuyxM4pxJHBAM",
 			"callback" : "http://127.0.0.1:6789/auth/twitter_callback"
 		}
 	},
